<resources>
    <string name="app_name">HeartRateApp</string>
    <string name="devices_list">Devices List</string>
    <string name="scan_devices">scan devices</string>
    <string name="hear_rate_stopped">Hear Rate stopped</string>
    <string name="steps">STEPS</string>
    <string name="dash_board">Dash Board</string>
    <string name="gender">Gender:</string>
    <string name="genderHint">Gender</string>
    <string name="weight">Weight:</string>
    <string name="birthDate">BirthDate:</string>
    <string name="name">Name:</string>
    <string name="confirmTextButton">confirm</string>
    <string name="higPressure">High Pressure</string>
    <string name="lowPressure">Low Pressure</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HighPressureInit">High Pressure: 0</string>
    <string name="LowPressureInit">Low Pressure: 0</string>
    <string name="test_blood_pressure">test \nBlood Pressure</string>
    <string name="daysTabs">days navigation</string>
    <string name="title_activity_dash_board_v2">DashBoardV2Activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dateText">Date</string>
    <string name="cardiac_n_load">Cardiac\n Load</string>
    <string name="result">result</string>
    <string name="min_value_fields_sop2">0</string>
    <string name="result_value_fields_sop2">0</string>
    <string name="hypoxia_n_time">Hypoxia\n Time</string>
    <string name="respiration_n_rate">Respiration\n rate</string>
    <string name="respiration_rate_max_value">40</string>
    <string name="blood_n_oxygen">Blood\n Oxygen</string>
    <string name="apnea_n_result">Apnea\n frequency</string>
    <string name="range_of_sleeping_n_activity">range of sleeping\n activity</string>
    <string name="blood_oxygen_max_value">99</string>
    <string name="hypoxia_time_max_value">100</string>
    <string name="sleep_activity_max_value">50</string>
    <string name="analytic_result">Analytic Result</string>
    <string name="cardiac_load_max_value">60</string>
    <string name="apnea_frequency_max_value">30</string>
    <string name="slide_fields_sop2">slide the fields for sop2</string>
    <string name="read_temperature">Read temperature</string>
    <string name="an_image_of_thermometer">An image of thermometer</string>
    <string name="temperature">Temperature</string>
    <string name="body_temperature">Body temperature</string>
    <string name="skin_temperature">Skin temperature</string>
    <string name="set_heart_rate_values">Set Heart Rate\n values</string>
    <string name="heart_rate_n_alert">Heart Rate\n Alert Values</string>
    <string name="settings_title">Settings</string>
    <string name="progress_ecg">Progress</string>
    <string name="hrv_ecg">HRV</string>
    <string name="_0_ecg">0</string>
    <string name="start_ecg_detection">start ECG detection</string>
    <string name="stop_ecg_detection">stop ECG detection</string>
    <string name="heart_rate_for_ecg_fragment">Heart Rate</string>
    <string name="qtc">QTC</string>
    <string name="sleep_time_title">Sleep\nperiod</string>
    <string name="apnea_definition">Apnea is the temporal cessation of breathing. During apnea,
        there is no movement of the muscles of inhalation and the volume of the lungs initially
        remains unchanged. Depending on how blocked the airways are , there may or
        may not be a flow of gas between the lungs and the environment, but if there is
        sufficient flow, gas exchange within the lungs and cellular respiration would not be
        severely affected. Voluntarily doing this is called holding one’s breath. Apnea may first be
        diagnosed in childhood, and it is recommended to consult a specialist, allergist or sleep
        physician to discuss symptoms when noticed. Malformation and/or malfunctioning of the upper
        airways may be observed by an orthodontist.</string>
    <string name="apnea_info_1_title">Complications</string>
    <string name="apnea_info_1_content">Under normal conditions, humans cannot store much oxygen in
        the body. Prolonged apnea leads to severe lack of oxygen in the blood circulation,
        leading to dysfunction of organ systems. Permanent brain damage can occur after as little as
        three minutes and death will inevitably ensue after a few more minutes unless ventilation is
        restored. However, under special circumstances such as hypothermia, hyperbaric oxygenation,
        apneic oxygenation (see below), or extracorporeal membrane oxygenation, much longer periods
        of apnea may be tolerated without severe detrimental consequences.
    </string>
    <string name="apnea_reference">https://en.wikipedia.org/wiki/Apnea</string>
    <string name="blood_oxygen_definition">Blood oxygen level is the amount of oxygen circulating in
        the blood. Red blood cells carry most of the oxygen, collecting it from the lungs and
        delivering it to all parts of the body. The body closely monitors blood oxygen levels to
        keep them within a specific range so that there is enough oxygen for the needs of
        every cell. A person’s blood oxygen level indicates how well the body distributes oxygen
        from the lungs to the cells, and it can be important for people’s health.
    </string>
    <string name="blood_oxygen_info_1_title">Normal and low blood oxygen levels</string>
    <string name="blood_oxygen_info_1_content">A healthy blood oxygen level varies between 75 and
        100 millimeters of mercury (mm Hg). When arterial blood gas (ABG) test results reveal an
        oxygen level below 60 mm HgTrusted Source, the medical community considers it low. In some
        cases, people with these results may require oxygen supplementation. A blood oxygen level
        that is too low compared with the average level of a healthy person can be a sign of a
        condition known as hypoxemia. This develops when the body has difficulty delivering oxygen
        to all of its cells, tissues, and organs.</string>
    <string name="blood_oxygen_reference">https://www.medicalnewstoday.com/articles/321044</string>
    <string name="respiration_rate_definition">A person’s respiratory rate is the number of breaths
        they take per minute. Like body temperature and heart rate, respiratory rate is a vital
        sign that can offer a window into a person’s overall health. This is true of both your
        waking and sleeping respiratory rates, as breathing significantly faster or slower than
        normal while you sleep can be due to a health condition. Sleep also has effects on the
        respiratory rate of everyone, regardless of their health. When we sleep, we naturally begin
        to breathe differently than we do when we are awake1. By learning more about how sleep
        interacts with the respiratory rate, it’s easier to recognize what is normal for your body
        and when there might be a problem.\n\n
        Once we fall asleep, the pace at which we breathe is determined by our metabolic rate.
        Most people breathe more slowly when they are asleep, and breathing evens out and becomes
        less variable with each successive stage of sleep. However, research shows that we also
        breathe faster and more erratically during the rapid eye movement (REM) sleep stage.
    </string>
    <string name="respiration_rate_info_1_title">What Causes a Low Respiratory Rate During Sleep?</string>
    <string name="respiration_rate_info_1_content">An abnormally low respiratory rate is called
        bradypnea. Sleep apnea is a breathing disorder that causes people’s breathing to slow and
        stop for brief periods while they are asleep. There are two major forms of this disorder,
        obstructive sleep apnea and central sleep apnea. People may also experience a low
        respiratory rate while asleep for reasons unrelated to a sleep disorder. Other conditions
        that can cause bradypnea include:\n\n

    Asthma or other lung disorders\n
    Heartburn\n
    Pneumonia\n
    Allergic reaction\n
    Heart conditions and cardiac arrest\n
    Drug use or overdose, particularly of a central nervous system depressant\n

    </string>
    <string name="respiration_rate_info_2_title">What Causes a High Respiratory Rate During Sleep?</string>
    <string name="respiration_rate_info_2_content">Rapid shallow breathing is called tachypnea,
        while deep rapid breathing is usually referred to as hyperventilation. However, both terms
        are sometimes used interchangeably. Neither form of high respiratory rate is a common
        symptom of any sleep disorder, though tachypnea is sometimes seen in people with sleep
        apnea15 being treated with a continuous positive airway pressure (CPAP) machine.\n
        Other causes of an abnormally high respiratory rate include:\n\n

    Anxiety and panic attacks\n
    Asthma\n
    Chronic obstructive pulmonary disease and other lung conditions\n
    Lung infections such as pneumonia\n
    Blood clot in one of the lung’s arteries\n
    Heart failure\n


    </string>
    <string name="respiration_rate_reference">https://www.sleepfoundation.org/sleep-apnea/sleep-respiratory-rate</string>
    <string name="hypoxia_definition">Hypoxia is a condition in which the body or a region of the
        body is deprived of adequate oxygen supply at the tissue level. Hypoxia may be classified as
        either generalized, affecting the whole body, or local, affecting a region of the body.
         Although hypoxia is often a pathological condition, variations in arterial oxygen
        concentrations can be part of the normal physiology, for example, during hypoventilation
        training or strenuous physical exercise.\n\n
        Generalized hypoxia occurs in healthy people when they ascend to high altitude, where it
        causes altitude sickness leading to potentially fatal complications: high altitude pulmonary
        edema and high altitude cerebral edema. Hypoxia also occurs in healthy individuals when
        breathing mixtures of gases with a low oxygen content, e.g. while diving underwater
        especially when using closed-circuit rebreather systems that control the amount of oxygen
        in the supplied air. Mild, non-damaging intermittent hypoxia is used intentionally during
        altitude training to develop an athletic performance adaptation at both the systemic and
        cellular level.\n\n

        In acute or silent hypoxia, a person’s oxygen level in blood cells and tissue can drop
        without any initial warning, even though the individual’s chest x-ray shows diffuse
        pneumonia with an oxygen level below normal. Doctors report cases of silent hypoxia with
        COVID-19 patients who did not experience shortness of breath or coughing until their
        oxygen levels had plummeted to such a degree that the patients risked acute respiratory
        distress and organ failure.</string>
    <string name="hypoxia_reference">https://en.wikipedia.org/wiki/Hypoxia_(medical)</string>
</resources>