<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f2f2f2">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#e4e4e4"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/confirmTextButton"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="#e4e4e4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tableLayout4"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmButton">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline56"
            app:layout_constraintEnd_toStartOf="@+id/guideline57"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline56"
            app:layout_constraintEnd_toStartOf="@+id/guideline59"
            app:layout_constraintStart_toStartOf="@+id/guideline57"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline57"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline56" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuGender"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:background="#96D4DC"
            android:backgroundTint="@color/cardview_light_background"
            android:textSize="16sp"
            app:boxBackgroundColor="#96D4DC"
            app:boxStrokeColor="#638FAC"
            app:endIconTint="#5C5F61"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline59"
            app:layout_constraintStart_toStartOf="@+id/guideline57"
            app:layout_constraintTop_toTopOf="@+id/guideline56">

            <AutoCompleteTextView
                android:id="@+id/selectorGender"
                style="@android:style/Widget.DeviceDefault.Light.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:backgroundTintMode="src_over"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/genderHint"
                android:inputType="none"
                android:textColor="#5C5F61"
                android:textColorHighlight="#5C5F61"
                android:textColorHint="#5C5F61"
                android:textSize="20sp"
                android:visibility="visible" />


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline59"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>